// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute values endpoint should return success 1`] = `
{
  "data": {
    "result": 39829.3,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 39829.3,
  "statusCode": 200,
}
`;

exports[`execute birc endpoint should return success 1`] = `
{
  "data": {
    "result": "0.0947",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "0.0947",
  "statusCode": 200,
}
`;
